bufixes